--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <img src="./img/svg.png" class="q1">
+    <img src="./img/svg.png" class="q2">
+    <img src="./img/svg.png" class="q3">
+    <img src="./img/svg.png" class="q4">
+    <img src="./img/svg.png" class="q5">
+    <img src="./img/svg.png" class="q6">
+
     <nav>
         <div class="container">
 
@@ -27,7 +34,7 @@
                             <rect x="2" y="18.5454" width="20" height="1.05" fill="black" />
                         </svg>
                     </label>
-                    <ul>
+                    <ul class="sss">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Resource</a></li>
                         <li><a href="#">Pricing</a></li>
@@ -98,6 +105,7 @@
         </div>
     </div>
     <div class="how">
+       <div class="container">
         <div class="work">
             <h1>How does the</h1>
             <div class="metawork">
@@ -105,6 +113,7 @@
             </div>
         </div>
         <p>Adipiscing at in tellus integer. Pellentesque massa placerat duis ultricies. Venenatis cras</p>
+       </div>
     </div>
     <div class="pictures">
         <div class="container">
@@ -185,15 +194,17 @@
             </div>
         </div>
     </div>
-    <div class="our">
-        <div class="latest">
-            <h1>Our Latest</h1>
-            <div class="activitiy">
-                <h1>Activitiy</h1>
+    <div class="container">
+        <div class="our">
+            <div class="latest">
+                <h1>Our Latest</h1>
+                <div class="activitiy">
+                    <h1>Activitiy</h1>
+                </div>
+    
             </div>
-
-        </div>
-        <p>Adipiscing at in tellus integer. Pellentesque massa placerat duis ultricies. Venenatis cras</p>
+            <p>Adipiscing at in tellus integer. Pellentesque massa placerat duis ultricies. Venenatis cras</p>
+    </div>
     </div>
     <div class="metaverse">
         <div class="container">
